<resources>
    <string name="app_name" translatable="false">QuestionnaireBuilder</string>

    <!-- Question types -->
    <string name="open_ended_question">Open-ended question</string>
    <string name="single_choice">Single choice</string>
    <string name="dropdown">Dropdown</string>
    <string name="yes_no">Yes/No</string>
    <string name="multiple_choice">Multiple choice</string>
    <string name="date">Date</string>
    <string name="rating_scale">Rating scale</string>
    <string name="matrix_question">Matrix question</string>
    <string name="rating_scale_level">Rating scale level</string>

    <!-- Buttons -->
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_btn">Continue</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="skip">Skip</string>
    <string name="log_out">Log Out</string>
    <string name="add_question">Add Question</string>
    <string name="delete">Delete</string>
    <string name="complete_survey">Complete</string>
    <string name="save_and_continue">Save &amp; Continue</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_my_surveys">My Surveys</string>
    <string name="title_settings">Settings</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="due_date">Due Date</string>
    <string name="responses">Responses:</string>
    <string name="theme">Theme</string>
    <string name="mandatory">Mandatory?</string>
    <string name="question_title">Question Title</string>
    <string name="new_question">New Question</string>
    <string name="max_allowed_selections">Max. allowed selections</string>
    <string name="delete_row">Delete row</string>
    <string name="enter_text">Enter text</string>
    <string name="answer_choices">Answer Choices</string>
    <string name="single_choice_selections_num" translatable="false">1</string>
    <string name="select_language">Select Language</string>
    <string name="show_other_option">Show \"Other\" option</string>
    <string name="create_survey">Create Survey</string>
    <string name="active_surveys">Active surveys</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_the_first_question">Add the first question</string>
    <string name="error_required">Required</string>
    <string name="single_date">Single Date</string>
    <string name="date_range">Date Range</string>
    <string name="date_selection_mode">Date Selection Mode</string>
    <string name="icon">Icon</string>
    <string name="discard_changes_title">Discard changes</string>
    <string name="discard_changes_msg">Are you sure you want to discard the changes?</string>
    <string name="answer">Answer</string>
    <string name="mandatory_star">*</string>
    <string name="cancel_survey_title">Cancel Survey</string>
    <string name="cancel_survey_message">Are you sure you want to cancel creating this survey?</string>
    <string name="date_required_alert">Due date is required</string>
    <string name="invalid_date_format">Invalid date format</string>
    <string name="invalid_date">Invalid date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="add_survey">Add Survey</string>
    <string name="survey_status">Survey Status</string>
    <string name="new_response_alert">New Response Alert</string>
    <string name="created">Created</string>
    <string name="modified">Modified</string>
    <string name="questions">Questions</string>
    <string name="pages">Pages</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="open_for_responses">Open for Responses</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="analyze">Analyze</string>
    <string name="email">Email</string>
    <string name="sign_up_msg">Don\'t have an account? Sign up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="hello_user">Hello, %1$s!</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="details">Details</string>
    <string name="completed_responses">Completed\nResponses</string>
    <string name="total_responses">Total\nResponses</string>
    <string name="draft">Draft</string>
    <string name="published">Published</string>
    <string name="close">Close</string>
    <string name="select">Select</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="reorder">Reorder</string>
    <string name="discard_reordering_title">Unsaved order changes</string>
    <string name="discard_reordering_msg">You’ve changed the order of your questions, but haven’t saved it.\nLeaving now will keep any edits or deletions, but discard the new order.</string>
    <string name="delete_question_title">Delete question</string>
    <string name="delete_question_msg">Are you sure you want to delete this question?\nPlease note that this is an irreversible action.</string>
    <string name="start_survey">Start Survey</string>
    <string name="continue_survey">Continue Survey</string>
    <string name="survey_responses_subtitle">%1$d of %2$d answered</string>
    <string name="view_all_responses">View all responses</string>
    <string name="no_responses_to_display">No responses to display.</string>
    <string name="thank_you">Thank you! Your answers have been submitted successfully.</string>
    <string name="survey_submitted">Survey submitted on %1$s at %2$s</string>
    <string name="survey_updated_successfully">Survey details have been updated successfully.</string>
    <string name="survey_update_failed">Failed. Try again later.</string>
    <string name="update_description">Update Description</string>
    <string name="update_title">Update Title</string>
    <string name="pending">Pending</string>
    <string name="in_progress">In progress</string>
    <string name="completed">Completed</string>
    <string name="sent">Sent</string>
    <string name="other">Other</string>
    <string name="no_active_surveys">There are currently no active surveys</string>
    <string name="no_surveys_yet">No surveys yet</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="choose_a_tag">Choose one or more tags:</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="no_questions_available_for_analysis">No questions available for analysis</string>
    <string name="copy_link">copy link</string>
    <string name="share_survey">Share Survey</string>
    <string name="editing_unavailable">Editing Unavailable</string>
    <string name="survey_already_has_response">This survey already has responses. You cannot edit this survey.</string>
</resources>