<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            app:menu="@menu/toolbar_menu_done"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/android:statusBarColor"
            android:backgroundTint="@color/light_blue"
            android:titleTextColor="@android:color/black"
            app:navigationIcon="@drawable/arrow_back_24px"
            app:title="@string/title"
            tools:subtitle="@string/survey_responses_subtitle"
            app:titleCentered="true"
            app:subtitleCentered="true"
            android:elevation="@dimen/toolbar_elevation"
            app:titleTextColor="?attr/colorOnSurface"
            app:navigationIconTint="?attr/colorOnSurface"
            app:titleTextAppearance="@style/Custom.Widget.Toolbar.TitleStyle"
            app:subtitleTextAppearance="@style/Custom.Widget.Toolbar.SubtitleStyle"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:nestedScrollingEnabled="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/questions_FAB_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="32dp"
        android:backgroundTint="?attr/colorPrimary"
        android:elevation="@dimen/fab_elevation"
        android:text="@string/start_survey"
        android:textSize="@dimen/button_text_size"
        android:visibility="gone"
        app:icon="@drawable/ic_start"
        android:scaleType="center"
        app:iconTint="?attr/colorOnPrimary"
        app:strokeColor="@color/blue" />

    <LinearLayout
        android:id="@+id/question_LL_add_first_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:visibility="gone">

        <TextView
            android:id="@+id/question_LBL_add"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_the_first_question"
            android:paddingHorizontal="16dp"
            android:textColor="@color/blue"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_vertical"
            android:layout_weight="1" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/question_FAB_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/add_question"
            android:elevation="@dimen/fab_elevation"
            android:scaleType="centerCrop"
            android:src="@drawable/add_24px"
            app:backgroundTint="?attr/colorPrimary"
            app:maxImageSize="32dp"
            app:tint="@color/white" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/questions_BTN_skip"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:text="@string/skip"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:layout_gravity="bottom|center"
        app:strokeColor="@color/blue"
        android:layout_marginBottom="36dp"
        app:strokeWidth="3dp"
        android:visibility="gone"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/question_FAB_add_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:contentDescription="@string/add_question"
        app:srcCompat="@drawable/add_24px"
        app:backgroundTint="@color/blue"
        app:maxImageSize="32dp"
        app:tint="@android:color/white"
        android:visibility="gone"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>