<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/home_LBL_greeting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:textColor="@color/dark_blue"
            android:textSize="24sp"
            android:textStyle="normal"
            android:text="@string/hello_user" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_BTN_createSurvey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_LBL_greeting"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="64dp"
            android:layout_marginVertical="48dp"
            android:text="@string/create_survey"
            android:textAllCaps="false"
            app:cornerRadius="20dp" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/home_LBL_activeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_BTN_createSurvey"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/active_surveys"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingHorizontal="8dp"/>

        <View
            android:id="@+id/scrollHintTop"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_below="@id/home_LBL_activeTitle"
            android:background="@drawable/top_fade"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/home_LST_surveys"
            android:layout_below="@id/scrollHintTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingHorizontal="8dp"
            tools:listitem="@layout/item_survey" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/home_LBL_noActiveSurveys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_LBL_activeTitle"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/no_surveys_margin"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:text="@string/no_active_surveys"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            android:paddingHorizontal="8dp"
            android:visibility="gone"/>

        <View
            android:id="@+id/scrollHintBottom"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_fade"
            android:visibility="gone"/>

    </RelativeLayout>
</FrameLayout>