<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.question_types.ChoiceQuestionFragment"
    android:layout_margin="@dimen/activity_vertical_margin">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/choiceQuestion_TIL_question"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/question_title"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                app:boxCornerRadiusTopStart="@dimen/corner_radius">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    android:minLines="5"
                    android:maxLines="5"
                    tools:text="Enter text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/choiceQuestion_SW_mandatory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:checked="true"
                android:text="@string/mandatory"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/max_allowed_selections"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>