<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.response_types.RatingQuestionResponseFragment"
    android:layout_margin="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/input_vertical_margin"
            android:layout_weight="1">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/responseRatingQuestion_LBL_mandatory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mandatory_star"
                android:layout_marginEnd="@dimen/input_horizontal_margin"
                android:textColor="@color/design_default_color_error"
                android:textSize="@dimen/input_text_size"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/responseRatingQuestion_LBL_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="The question"
                android:textSize="@dimen/input_text_size"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/responseRatingQuestion_LBL_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_vertical_margin"
                android:text="@string/error_required"
                android:textColor="@color/design_default_color_error"
                android:textSize="@dimen/input_text_size"
                android:visibility="gone"/>

            </LinearLayout>

        </LinearLayout>

        <RatingBar
            android:id="@+id/customRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/input_vertical_margin"
            android:layout_gravity="center"
            android:numStars="5"
            android:stepSize="1"
            android:isIndicator="false"
            android:progressDrawable="@drawable/custom_ratingbar_thumb_up_selector"
            android:minHeight="48dp"
            android:maxHeight="48dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/responseRatingQuestion_LLC_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/responseRatingQuestion_BTN_save"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/save"
            app:cornerRadius="20dp"
            android:textAllCaps="false"/>

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/responseRatingQuestion_BTN_skip"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/skip"
            app:strokeWidth="3dp"
            app:strokeColor="@color/blue"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"/>

    </LinearLayout>

</FrameLayout>