<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.response_types.OpenQuestionResponseFragment"
    android:layout_margin="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/input_vertical_margin"
            android:layout_weight="1">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/responseOpenQuestion_LBL_mandatory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_vertical_margin"
                android:text="@string/mandatory_star"
                android:layout_marginEnd="@dimen/input_horizontal_margin"
                android:textColor="@color/design_default_color_error"
                android:textSize="@dimen/input_text_size"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/responseOpenQuestion_LBL_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/input_vertical_margin"
                tools:text="The question"
                android:textSize="@dimen/input_text_size"
                />

        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/responseOpenQuestion_TIL_answer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:hint="@string/answer"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius"
            app:boxCornerRadiusTopStart="@dimen/corner_radius"
            app:boxStrokeColor="?attr/colorPrimary"
            app:hintTextColor="?attr/colorSecondaryVariant">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/responseOpenQuestion_TXT_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="top|start"
                android:minLines="5"
                android:maxLines="5"
                tools:text="Enter text"
                android:textSize="@dimen/input_text_size"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/responseOpenQuestion_LLC_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/responseOpenQuestion_BTN_save"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/save"
            app:cornerRadius="20dp"
            android:textAllCaps="false"/>

        <View
            android:layout_width="0dp"
            android:layout_height="8dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/responseOpenQuestion_BTN_skip"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/skip"
            app:strokeWidth="3dp"
            app:strokeColor="@color/blue"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"/>

    </LinearLayout>

</FrameLayout>